[FIX] Broken layout when setting the ratio to 4:3

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -90,7 +90,7 @@ html, body {
 	left: 0px;
 	bottom: 0px;
 	width: 100%;
-	top: 430px;
+	top: 470px;
 	overflow-x: hidden;
     overflow-y: scroll;
 	white-space: nowrap;
